tweak display message

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             <h2>供 Shot 時間分佈</h2>
             <p style="text-align: center; font-size: 0.9em; color: #666; margin-top: 10px;">
                 以下是各小時提供 Shot 的酒吧分佈，按貝氏平均評分排序。<br>
-                在店家名稱上停留一陣子，促銷資訊就會顯示。
+                在<b>店家名稱上停留一陣子</b>或是<b>點擊酒吧名稱</b>，促銷資訊就會顯示。
             </p>
 
             <!-- First Block: 13:00 ~ 17:00 -->
