--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
     <title>2025 條通祭酒吧分析</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZC13PD83Y"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YZC13PD83Y');
+    </script>
     <meta property="og:title" content="2025 條通祭酒吧分析">
     <meta property="og:description" content="歡迎來到考特打造的條通祭分析。探索酒吧數據、根據特定屬性的排名地圖和視覺化圖表。">
     <meta property="og:image" content="images/thumbnail.jpg">
