Update popup styling for better readability
- Add a new `.popup-content` CSS class to centralize popup styling
  and enforce left-aligned text for consistent presentation.

- Replace inline styling with the `.popup-content` class in the
  `populateBarTable.js` file to improve maintainability and
  ensure a cleaner DOM structure.

- Enhance the visual consistency of popup content across the application.

--- a/index.html
+++ b/index.html
@@ -413,6 +413,9 @@
         #shot-distribution-table-2 tbody tr:last-of-type {
             border-bottom: 2px solid #333;
         }
+        .popup-content {
+            text-align: left !important;
+        }
     </style>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
