Enhance metadata and improve accessibility in index.html
- Update the page title to include a more descriptive phrase for
  better SEO and clarity.

- Add meta tags for charset, viewport, keywords, author, and robots
  to improve search engine optimization and ensure mobile responsiveness.

- Update alt attributes for images to provide more descriptive and
  accessible text, enhancing usability for screen readers and SEO.

- Ensure consistency in the presentation of data visualization images
  with updated descriptions.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>2025 條通祭酒吧分析</title>
+    <title>2025 條通祭酒吧分析 | 條通商圈酒吧排名與數據視覺化</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZC13PD83Y"></script>
     <script>
@@ -12,6 +12,11 @@
 
         gtag('config', 'G-YZC13PD83Y');
     </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="條通祭, 酒吧分析, 2025條通祭, 條通商圈, 微醺散步, 沈浸條通, 酒吧排名, 貝氏平均">
+    <meta name="author" content="考特">
+    <meta name="robots" content="index, follow">
     <meta property="og:title" content="2025 條通祭酒吧分析">
     <meta property="og:description" content="歡迎來到考特打造的條通祭分析。探索酒吧數據、根據特定屬性的排名地圖和視覺化圖表。">
     <meta property="og:image" content="images/thumbnail.jpg">
@@ -574,7 +579,7 @@
                 <div class="grid-item">
                     <a href="images/operating_hours_distribution.png" data-lightbox="analysis"
                         data-title="供 Shot 營運時間分布圖">
-                        <img src="images/operating_hours_distribution.png" alt="供 Shot 營運時間分布圖">
+                        <img src="images/operating_hours_distribution.png" alt="條通祭酒吧供 Shot 營運時間分布圖">
                     </a>
                     <p>供 Shot 營運時間分布圖</p>
                 </div>
@@ -589,7 +594,7 @@
                 <div class="grid-item">
                     <a href="images/correlation_heatmap.png" data-lightbox="analysis"
                         data-title="數值欄位相關性 (貝氏平均評分, 評分, 評論數量)">
-                        <img src="images/correlation_heatmap.png" alt="數值欄位相關性">
+                        <img src="images/correlation_heatmap.png" alt="條通祭酒吧數值欄位相關性熱力圖">
                     </a>
                     <p>數值欄位相關性 (貝氏平均評分, 評分, 評論數量)</p>
                 </div>
